{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 3,
  "lineage": "a0aa1166-f08b-7ce2-06d4-204b4d3a1a45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rtp03-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:internet-gateway/igw-09fa917cf9db7c1e9",
            "id": "igw-09fa917cf9db7c1e9",
            "owner_id": "584992738748",
            "tags": {
              "Name": "rtp03-igw"
            },
            "tags_all": {
              "Name": "rtp03-igw"
            },
            "vpc_id": "vpc-05aa79c8df7e67c3c"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp03-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:route-table/rtb-090d7789452096966",
            "id": "rtb-090d7789452096966",
            "owner_id": "584992738748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fa917cf9db7c1e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtp03-public-rt"
            },
            "tags_all": {
              "Name": "rtp03-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa79c8df7e67c3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rtp03-igw",
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtp03-rta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c64172570f6695ff",
            "route_table_id": "rtb-090d7789452096966",
            "subnet_id": "subnet-0b8d2e048577b0319"
          },
          "dependencies": [
            "aws_internet_gateway.rtp03-igw",
            "aws_route_table.rtp03-public-rt",
            "aws_subnet.rtp03-public_subnet_01",
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtp03-rta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a99f67bdcab7d0f",
            "route_table_id": "rtb-090d7789452096966",
            "subnet_id": "subnet-07d80867e22f30f1f"
          },
          "dependencies": [
            "aws_internet_gateway.rtp03-igw",
            "aws_route_table.rtp03-public-rt",
            "aws_subnet.rtp03-public_subnet_02",
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rtp03-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:security-group/sg-0a0e8bbea81df24f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0e8bbea81df24f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "rtp03-sg",
            "name_prefix": "",
            "owner_id": "584992738748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "tags_all": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa79c8df7e67c3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rtp03-public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:subnet/subnet-0b8d2e048577b0319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d2e048577b0319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584992738748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rtp03-public_subnet_01"
            },
            "tags_all": {
              "Name": "rtp03-public_subnet_01"
            },
            "vpc_id": "vpc-05aa79c8df7e67c3c"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rtp03-public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:subnet/subnet-07d80867e22f30f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d80867e22f30f1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584992738748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rtp03-public_subnet_02"
            },
            "tags_all": {
              "Name": "rtp03-public_subnet_02"
            },
            "vpc_id": "vpc-05aa79c8df7e67c3c"
          },
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rtp03-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:vpc/vpc-05aa79c8df7e67c3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-03ac3dad0a10953ba",
            "default_route_table_id": "rtb-0c2d98bc0961000f1",
            "default_security_group_id": "sg-091a831bff30d14c8",
            "dhcp_options_id": "dopt-0d39dee1b1d9d503f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05aa79c8df7e67c3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2d98bc0961000f1",
            "owner_id": "584992738748",
            "tags": {
              "Name": "rpt03-vpc"
            },
            "tags_all": {
              "Name": "rpt03-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:584992738748:security-group/sg-0ac6988ff6635f14f",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac6988ff6635f14f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-test",
            "name_prefix": "",
            "owner_id": "584992738748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05aa79c8df7e67c3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rtp03-vpc"
          ]
        }
      ]
    }
  ]
}